Implemented variable type support
+ Refactored variable parsing